--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "tesseract.js": "^7.0.0"
   }
 }
